--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension List::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
 
+0.72    Wed Jun 30 2004
+	- removed List::SkipList::Null type and $NULL variable
+	- moved Test::More from requires to build_requires parameter
+
 0.71	Sat Jun 12 2004
 	- updated POD
 	- redesigned internals of first_key, next_key and last_key
