Import of RRWO/List-SkipList-0.73 from CPAN.
gitpan-cpan-distribution: List-SkipList
gitpan-cpan-version:      0.73
gitpan-cpan-path:         RRWO/List-SkipList-0.73.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -81,6 +81,9 @@ DESCRIPTION
 REVISION HISTORY
     Changes since v0.71:
 
+    0.73    Mon Jul 26 2004
+	- rebuilt distribution with proper META.yml
+
     0.72    Wed Jun 30 2004
 	- removed List::SkipList::Null type and $NULL variable
 	- moved Test::More from requires to build_requires parameter
