--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension List::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
 
+0.73    Mon Jul 26 2004
+	- rebuilt distribution with proper META.yml
+
 0.72    Wed Jun 30 2004
 	- removed List::SkipList::Null type and $NULL variable
 	- moved Test::More from requires to build_requires parameter
