--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
-Revision history for Perl extension List::SkipList. (Changes which may
+Revision history for Perl extension Algorithm::SkipList. (Changes which may
 not be backwards compatible are marked with an asterisk '*'.)
+
+0.73_01 Mon Aug  2 2004
+	- renamed module to Algorithm::SkipList from List::SkipList
+	- Node and Header types are now in separate files
+	- List::SkipList is included, but gives deprecation warnings
+	- header node gives warnings when calling key or value methods
+	- heavy test has less tests for standard dist
+	- renamed test files
+	- minor code changes
+	- corrected typos in POD
+	- removed benchmarking code from etc/
+	- redid version numbering of Node and Header classes, since they
+	  were ignored by PAUSE/CPAN indexers anyway
+	- added PurePerl dummy class
 
 0.73    Mon Jul 26 2004
 	- rebuilt distribution with proper META.yml
